--- a/t.html
+++ b/t.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=M+PLUS+Rounded+1c:wght@800&family=Montserrat:wght@800&family=Permanent+Marker&family=Poppins:wght@300;600;700&family=Rubik:wght@500&family=Space+Grotesk:wght@300&display=swap" rel="stylesheet">
     <!--Fonts End-->
     <!--icons-->
-    <script src="https://kit.fontawesome.com/adfd04e546.js" crossorigin="anonymous"></script>
+    <script src="./icon.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
